# rustube

./: .gitignore  Cargo.toml  Dockerfile  setup  sqlx-data.json
.github/workflows/: docker-publish.yml
assets/: milligram.css  style.css  watch.js
migrations/: 1_videos.sql  2_channels.sql  3_playstates.sql  4_playlists.sql  5_tags.sql  6_video_index.sql  7_chapters.sql
src/: config.rs  lib.rs  main.rs
src/http/: api.rs  assets.rs  channel.rs  error.rs  feed.rs  mod.rs  playlist.rs  playstate.rs  prelude.rs  response.rs  search.rs  video.rs
src/jobs/: chapters.rs  index.rs  mod.rs  playlist.rs  scan.rs
src/model/: channel.rs  chapter.rs  mod.rs  playlist.rs  playstate.rs  tag.rs  video.rs
src/model/video/: index.rs
templates/: base.html  channel.html  feed.html  nav.html  playlist.html  search.html  video.html
